Found bug: Using kt 0.4 FJ: 4.84137788e+00 1.78659040e+00 N2: 6.61827986e+00 p0: 1.40779161e+00 1.47653553e+00 2.53867340e+00 1.70973705e+00 diB = 4.16203 p1: 1.33821290e+00 1.18367711e+00 3.20769501e+00 2.40125703e+00 diB = 3.19191 p2: 2.58163530e+00 1.26634849e+00 2.67847310e+00 3.71343087e+00 diB = 8.26848 d  1  0 = 3.34532 d  2  0 = 3.7372 d  2  1 = 3.48841

--- a/fj/Makefile
+++ b/fj/Makefile
@@ -11,7 +11,7 @@ all: $(EXE)
 
 $(EXE): %: %.cc
 	@echo CC $@
-	@g++ -std=c++11 -Wall -O3 $(FJ_CFLAGS) $^ -o $@ $(FJ_LIBS)
+	@g++ -std=c++11 -Wall -O3 $(FJ_CFLAGS) $^ -o $@ $(FJ_LIBS) -pthread
 
 clean:
 	@rm -fv $(EXE)
